# trading-sentiment-analysis

./: .gitignore  PROCESS.md  README.md  main.py  pyproject.toml
src/: categories.py  data_loader.py  fetch_news.py  model.py  preprocessing.py
